Sun Nov 25 22:34:00 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* array.c (ary_resize_smaller): new function to resize array.

	* array.c (rb_ary_delete): refactoring to extract a function.

	* array.c (rb_ary_delete_same): refactoring.
	  It renames function, reduces duplicated code and removes unused
	  code.

	* gc.c (wmap_final_func): follow the above change.

	* internal.h (rb_ary_delete_same): ditto.

Sun Nov 25 22:27:33 2012  Benoit Daloze  <eregontp@gmail.com>

	* array.c: fixes for the updated documentation in r35858:
	  Typos and #take/#drop accept to take/drop 0 elements.

Sun Nov 25 19:43:29 2012  Kazuki Tsujimoto  <kazuki@callcc.net>

	* NEWS: add a news about iconv.

Sun Nov 25 03:49:23 2012  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb, test/test_set.rb: Move tests embedded in lib/set.rb
	  to test/test_set.rb.

Sun Nov 25 03:44:50 2012  Akinori MUSHA  <knu@iDaemons.org>

	* string.c (rb_str_each_line, rb_str_lines): String#lines now
	  returns an array instead of an enumerator.  Passing a block is
	  deprecated but still supported for backwards compatibility.
	  Based on the patch by yhara. [Feature #6670]

	* string.c (rb_str_each_char, rb_str_chars): Ditto for
	  String#chars.

	* string.c (rb_str_each_codepoint, rb_str_codepoints): Ditto for
	  String#codepoints.

	* string.c (rb_str_each_byte, rb_str_bytes): Ditto for
	  String#bytes.

	* NEWS: Add notes for the above changes.

Sun Nov 25 02:07:37 2012  Akinori MUSHA  <knu@iDaemons.org>

	* test/ruby/envutil.rb (Test::Unit::Assertions#assert_warning)
	  (Test::Unit::Assertions#assert_warn), test/ruby/envutil.rb,
	  test/ruby/test_enumerator.rb, test/ruby/test_io_m17n.rb,
	  test/ruby/test_regexp.rb, test/ruby/test_syntax.rb:
	  assert_warn() and assert_warning() are reversed.

Sat Nov 24 21:08:50 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* gc.c (wmap_final_func): rename variables to clarify the meaning.
	  In wmap2obj the key is WeakRef and the value is referenced object.